--- a/src/Common.cfg
+++ b/src/Common.cfg
@@ -1,6 +1,6 @@
 NumberOfPreferredNeighbors 2
 UnchokingInterval 5
-OptimisticUnchokingInterval 15
-FileName TheFile.dat
-FileSize 10000232
-PieceSize 32768
+OptimisticUnchokingInterval 14
+FileName Mabanua-my-leaving.mp3
+FileSize 5698105
+PieceSize 5000
